--- a/.github/workflows/content_update.yml
+++ b/.github/workflows/content_update.yml
@@ -1,6 +1,8 @@
 name: Content Update
 
 on:
+  push:
+    branches: [ main ]
   schedule:
     - cron: '0 * * * *' # Every hour
   workflow_dispatch:      # Manual trigger
